--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0"
   }
 }
